--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,174 @@
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }   
+
+:root{
+   --VeryDarkBlue: hsl(243, 87%, 12%);
+   --DesaturatedBlue: hsl(238, 22%, 44%);
+   --BrightBlue: hsl(224, 93%, 58%);
+   --ModerateCyan: hsl(170, 45%, 43%);
+   --LightGrayishBlue: hsl(240, 75%, 98%);
+   --LightGray: hsl(0, 0%, 75%);
+}
+
+*{
+    font-family: "raleway";
+}
+
+.menu{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+nav{
+    display: flex;  
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
+}
+
+nav a{
+    text-decoration: none;
+    color: gray;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
+.img__primary{
+    width: 600px;
+    height: 500px;
+}
+
+.beginning{
+    padding: 10px;
+    padding-bottom: 40px;
+    width: 500px;
+    margin-right: 70px;
+}
+
+p{
+    font-family: "calibri";
+}
+
+h1,h2{
+    font-size: 40px;
+    color: var(--VeryDarkBlue);
+    font-family: "calibri";
+}
+
+input,button{
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+button{
+    background-color: var(--BrightBlue);
+    border: none;
+    color: white;
+    width: auto;
+}
+
+aside{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: var(--LightGrayishBlue);
+}
+
+aside a{
+    color: var(--ModerateCyan);
+}
+
+.img__secundary{
+    width: 600px;
+    height: 500px;
+}
+
+.info{
+    margin: 50px;
+    padding: 35px;
+}
+
+.card__comment{
+    border-radius: 9px;
+    width: 300px;
+    height: 200px;
+    padding: 10px;
+    margin-top: 50px;
+    background-color: white;
+}
+
+.info a{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.info__comment{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
+.info__comment img{
+    border-radius: 50%;
+    width: 30px;
+    gap: 30px;
+}
+
+article{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--DesaturatedBlue);
+}
+
+article + div{
+    width: 750px;
+    padding: 20px;
+}
+
+article p,h3{
+    color:white;
+}
+
+.email{
+    align-items: center;
+    height: 100px;
+    margin-right: 30px;
+}
+
+.email input{
+    width:200px;
+}
+
+article h3{
+    font-size: 27px;
+}
+
+article{
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    color: white;
+    background-color: var(--VeryDarkBlue);
+
+}
+
+footer{
+    border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px;
+}
+
