--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body{
 header{
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 32px 64px ;
 }
 
 nav{
@@ -36,7 +36,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 90px;
 }
 
 .img__primary{
@@ -71,14 +71,12 @@ button{
 
 section{
     display: flex;
+    justify-content: center;
     align-items: center;
     background-color: var(--LightGrayishBlue);
     padding: 20px;
 }
 
-aside a{
-    color: var(--ModerateCyan);
-}
 
 .img__secundary{
     width: 600px;
@@ -99,10 +97,11 @@ aside a{
     background-color: white;
 }
 
-.info a{
+.beginning a{
     display: flex;
     align-items: center;
     gap: 6px;
+    color: var(--ModerateCyan);
 }
 
 .info__comment{
@@ -119,23 +118,13 @@ aside a{
     gap: 30px;
 }
 
-
-article + div{
-    width: 750px;
-    padding: 20px;
-}
-
 article p,h3{
     color:white;
 }
 
-.email{
-    align-items: center;
-    height: 100px;
-    margin-right: 30px;
-}
 
 .email input{
+    margin-bottom: 5px;
     width:200px;
 }
 
@@ -144,7 +133,6 @@ article h3{
 }
 
 article{
-    border: 1px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,9 +143,21 @@ article{
 }
 
 footer{
-    border: 1px solid red;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: var(--VeryDarkBlue);
+    color: white;
+    padding: 10px;
 }
 
+.edit__info{
+    padding: 10px;
+    width: 500px;
+    margin-right: 70px;
+}
+
+footer img{
+    border: 1px solid red;
+    fill: white;
+}
