--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ article{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px;
+    padding: 25px 80px 25px 70px;
     color: white;
     background-color: var(--DesaturatedBlue);
 
@@ -148,7 +148,7 @@ footer{
     align-items: center;
     background-color: var(--VeryDarkBlue);
     color: white;
-    padding: 10px;
+    padding: 25px 80px 30px 25px;
 }
 
 .edit__info{
@@ -157,7 +157,3 @@ footer{
     margin-right: 70px;
 }
 
-footer img{
-    border: 1px solid red;
-    fill: white;
-}
